samples/_failures_safe/1761177278_05c21c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c2bfbe19.c: In function ‘main’:
./samples/SAFE/__tmp_c2bfbe19.c:137:5: error: expected declaration or statement at end of input
  137 |     }
      |     ^
